samples/_failures_safe/1761608652_14cb7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb1d39c1.c: In function ‘create_sample_graph’:
./samples/SAFE/__tmp_bb1d39c1.c:161:9: error: expected expression at end of input
  161 |         {0, 1, 4},
      |         ^
./samples/SAFE/__tmp_bb1d39c1.c:161:9: error: expected declaration or statement at end of input
